--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body BGCOLOR="#000000" BODY BACKGROUND="bkgrade.jpg" TEXT="#FFFFFF" LINK="#FFFFFF" VLINK="#FFFF80" ALINK="#FF00F0">>
+<body BGCOLOR="#000000" BODY BACKGROUND="bkgrade.jpg" TEXT="#FFFFFF" LINK="#FFFFFF" VLINK="#FFFF80" ALINK="#FF00F0">
 <h1>Hellow World !! uwu </h1>
 <p> i love rebecca hello world uwu. </p>
 </body>
