added more shit

--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
 <html>
 <body BGCOLOR="#000000" BODY BACKGROUND="bkgrade.jpg" TEXT="#FFFFFF" LINK="#FFFFFF" VLINK="#FFFF80" ALINK="#FF00F0">
-<h1>Hellow World !! uwu </h1>
-<p> i love rebecca hello world uwu. </p>
+<CENTER><h1>Adam Carrick's RADICAL homepage</h1>
+<img src="BLOODLINE.GIF">
+
+<p> SITE STILL UNDER CONTSTUCTION PLEASE EXCUSE THE DUST. </p>
+<img src="construc.GIF">
+
+</CENTER>
+
+<center>
+
+<footer>
+<P>
+     Send me Mail if you have any questions, suggestions, or to say hello.<BR> <BR>
+   <A HREF="mailto:Adam<unknow5763@gmail.com>">Feedback for Adam</A>
+      <IMG SRC="mbox.gif" ALIGN="ABSMIDDLE" WIDTH=63 HEIGHT=48 BORDER=0 ALT="Mail">
+    </P>
+	
+</CENTER>
+</footer>
 </body>
 </html> 
