--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <img src="BLOODLINE.GIF">
 
 <p> SITE STILL UNDER CONTSTUCTION PLEASE EXCUSE THE DUST. </p>
-<img src="construc.GIF">
+<img src="construc.gif">
 
 </CENTER>
 
