--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body BGCOLOR="#000000" BODY BACKGROUND="bkgrade.jpg" TEXT="#FFFFFF" LINK="#FFFFFF" VLINK="#FFFF80" ALINK="#FF00F0">
 <CENTER><h1>Adam Carrick's RADICAL homepage</h1>
-<img src="BLOODLINE.GIF">
+<img src="BLOODLINE.gif">
 
 <p> SITE STILL UNDER CONTSTUCTION PLEASE EXCUSE THE DUST. </p>
 <img src="construc.gif">
