--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
    <A HREF="mailto:Adam<unknow5763@gmail.com>">Feedback for Adam</A>
       <IMG SRC="mbox.gif" ALIGN="ABSMIDDLE" WIDTH=63 HEIGHT=48 BORDER=0 ALT="Mail">
     </P>
-	
-	 <a href="http://www.winamp.com" target="_top"><img src="buttons/winamp-miniban.gif" width="88" height="31" border="0" alt="Get Winamp"></a>
-	
+
+<br>
+<IMG SRC="winamp-miniban.gif">
+
+
 </CENTER>
 </footer>
 </body>
