--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
+
+<html>
+<body>
+
 <html>
 <body BGCOLOR="#000000" BODY BACKGROUND="bkgrade.jpg" TEXT="#FFFFFF" LINK="#FFFFFF" VLINK="#FFFF80" ALINK="#FF00F0">
-<CENTER><h1>Adam Carrick's RADICAL homepage</h1>
-<img src="BLOODLINE.gif">
+<CENTER><h1>Adam Carrick's page</h1>
 
-<p> SITE STILL UNDER CONTSTUCTION PLEASE EXCUSE THE DUST. </p>
+
+<p> SITE STILL UNDER CONTSTUCTION  </p>
 <img src="construc.gif">
 
 </CENTER>
@@ -18,8 +21,16 @@
       <IMG SRC="mbox.gif" ALIGN="ABSMIDDLE" WIDTH=63 HEIGHT=48 BORDER=0 ALT="Mail">
     </P>
 
+<p> 
+	I am an avid player of chess as well, click these to add me if you play online chess. <BR> <BR>
+	<IMG SRC="chessyah.gif" ALIGN="ABSMIDDLE" WIDTH=320 HEIGHT=240 BORDER=0 > <BR>
+	<A HREF="https://lichess.org/@/ubiklikeschesse"> lichess </A> <BR> <BR>
+	<A HREF="https://www.chess.com/member/hgrunt"> Chess.com </A> <BR> <BR>
+
 <br>
-<IMG SRC="winamp-miniban.gif">
+
+<p>
+	<A HREF="pages.html">some expierments with processing</A>
 
 
 </CENTER>
