--- a/pages.html
+++ b/pages.html
@@ -24,8 +24,8 @@
 	<p> This is just a quick example of some random squares using processing. Click the mouse on the below canvas
 		
 		<canvas id="theCanvas" data-processing-sources="myProgram.pde"></canvas>
-		<center>
-			<pre>
-		 <A HREF="https://processing.org/">Processing</A>
+
+		<p>  <A HREF="https://processing.org/">Processing</A>
+		
 	</body>
 </html>
