--- a/pages.html
+++ b/pages.html
@@ -9,7 +9,8 @@
 			}
 			
 			#theCanvas {
-				width: 500px;
+				width: 640px;
+				height: 480px;
 				margin: auto;
 				border: 3px solid black;
 				display: block;
