--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <html>
-<body BGCOLOR="#000000" BODY BACKGROUND="bkgrade.jpg" TEXT="#FFFFFF" LINK="#FFFFFF" VLINK="#FFFF80" ALINK="#FF00F0">
+<body BGCOLOR="#000000" BODY BACKGROUND="bkgrade.jpg" TEXT="#ff4040  " LINK="#ff4049" VLINK="#ff4040" ALINK="#ff4040">
 <CENTER><h1>Adam Carrick's page</h1>
 
 
@@ -20,17 +20,20 @@
    <A HREF="mailto:Adam<unknow5763@gmail.com>">Feedback for Adam</A>
       <IMG SRC="mbox.gif" ALIGN="ABSMIDDLE" WIDTH=63 HEIGHT=48 BORDER=0 ALT="Mail">
     </P>
-
+<BR> <BR>
 <p> 
 	I am an avid player of chess as well, click these to add me if you play online chess. <BR> <BR>
-	<IMG SRC="chessyah.gif" ALIGN="ABSMIDDLE" WIDTH=320 HEIGHT=240 BORDER=0 > <BR>
-	<A HREF="https://lichess.org/@/ubiklikeschesse"> lichess </A> <BR> <BR>
+	<IMG SRC="chessyah.gif" ALIGN="ABSMIDDLE" WIDTH=160 HEIGHT=120 BORDER=0 > <BR>
+	<A HREF="https://lichess.org/@/ubiklikeschesse"> lichess </A> <BR>
 	<A HREF="https://www.chess.com/member/hgrunt"> Chess.com </A> <BR> <BR>
 
-<br>
-
+<P> I take loads of pictures too, click the camera to follow me on instagram </P>
+ <a href="https://www.instagram.com/_carrick_pre/">
+         <img alt="instagram" src="Camera_1.gif"
+         width=100" height="70">
 <p>
 	<A HREF="pages.html">some expierments with processing</A>
+<!--<A HREF="pagess.html"> some of my favourite photos I have taken</A> -->
 
 
 </CENTER>
