--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 	<A HREF="https://lichess.org/@/ubiklikeschesse"> lichess </A> <BR>
 	<A HREF="https://www.chess.com/member/hgrunt"> Chess.com </A> <BR> <BR>
 
-<P> I take loads of pictures too, click the camera to follow me on instagram </P>
+<P> I take loads of pictures too, click the camera to follow me on instagram </P> 
+<A HREF="photos.html"> Or click this to see some photos on here </A>
+
  <a href="https://www.instagram.com/_carrick_pre/">
          <img alt="instagram" src="Camera_1.gif"
          width=100" height="70">
