--- a/index.html
+++ b/index.html
@@ -4,20 +4,14 @@
 
 <html>
 <body BGCOLOR="#000000" BODY BACKGROUND="bkgrade.jpg" TEXT="#ff4040  " LINK="#ff4049" VLINK="#ff4040" ALINK="#ff4040">
-<CENTER><h1>Adam Carrick's page</h1>
+<CENTER><h1>Carrick's page</h1>
 
 
 <p> SITE STILL UNDER CONTSTUCTION  </p>
 <img src="construc.gif">
-
-</CENTER>
-
-<center>
-
-<footer>
-<P>
+	<P>
      Send me Mail if you have any questions, suggestions, or to say hello.<BR> <BR>
-   <A HREF="mailto:Adam<unknow5763@gmail.com>">Feedback for Adam</A>
+   <A HREF="mailto:Carrick<unknow5763@gmail.com>"></A>
       <IMG SRC="mbox.gif" ALIGN="ABSMIDDLE" WIDTH=63 HEIGHT=48 BORDER=0 ALT="Mail">
     </P>
 <BR> 
@@ -37,8 +31,17 @@
 	<A HREF="pages.html">some expierments with processing</A>
 <!--<A HREF="pagess.html"> some of my favourite photos I have taken</A> -->
 
+</CENTER>
+
+<center>
+
+<footer>
+			 <h1> here is a lot of buttons i like </h1>
+			 
+
 
 </CENTER>
 </footer>
+			 
 </body>
 </html> 
