--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <html>
 <body BGCOLOR="#000000" BODY BACKGROUND="bkgrade.jpg" TEXT="#ff4040  " LINK="#ff4049" VLINK="#ff4040" ALINK="#ff4040">
 <CENTER><h1>Carrick's page</h1>
+	<img src="BLOODLINE.gif">
 
 
 <p> SITE STILL UNDER CONTSTUCTION  </p>
