Added lots of crap

--- a/index.html
+++ b/index.html
@@ -38,7 +38,33 @@
 
 <footer>
 			 <h1> here is a lot of buttons i like </h1>
-			 
+<img src= " Images/4noone.gif ">
+<img src= " Images/anybrowser3.png ">
+<img src= " Images/bestviewed.gif ">
+<img src= " Images/bestview.gif ">
+<img src= " Images/brain2.gif ">
+<img src= " Images/bsrkrigr.gif ">
+<img src= " Images/button_enhanced.gif ">
+<img src= " Images/bview_w.gif ">
+<img src= " Images/clean_glasses.gif ">
+<img src= " Images/css2.gif ">
+<img src= " Images/emacs.png ">
+<img src= " Images/everything.gif ">
+<img src= " Images/femboy.gif ">
+<img src= " Images/grizzly.gif ">
+<img src= " Images/gutenberg.gif ">
+<img src= " Images/InternetArchive.png ">
+<img src= " Images/javanow.gif ">
+<img src= " Images/msfree.png ">
+<img src= " Images/nftbutton.gif ">
+<img src= " Images/notepadpp2.gif ">
+<img src= " Images/remail.gif ">
+<img src= " Images/right2repair.gif ">
+<img src= " Images/roly-saynotoweb3.gif ">
+<img src= " Images/seedyourtorrents.gif ">
+<img src= " Images/valid-html50.png ">
+
+
 
 
 </CENTER>
