added even more crap

--- a/photos.html
+++ b/photos.html
@@ -1,3 +1,60 @@
+<!DOCTYPE html>
 <html>
-test
+<head>
+<style>
+div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+</style>
+</head>
+<body>
+
+<div class="gallery">
+  <a target="_blank" href="Images/Gallery/catacombsStairCase.jpg">
+    <img src="Images/Gallery/catacombsStairCase.jpg"  width="800" height="600"  alt="Forest">
+  </a>
+  <div class="At the paris catacombs"></div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Images/Gallery/Paris.jpg">
+    <img src="Images/Gallery/Paris.jpg" alt="Forest" width="600" height="400">
+  </a>
+  <div class="desc">Photos of paris from the top of the arc de triumph</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Images/Gallery/parisface.jpg">
+    <img src="Images/Gallery/parisface.jpg" alt="" width="600" height="400">
+  </a
+  <div class="desc">..</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Images/Gallery/skulls.jpg">
+    <img src="Images/Gallery/skulls.jpg" alt="" width="600" height="400">
+  </a>
+  <div class="desc">catacomb</div>
+</div>
+
+</body>
 </html>
+
+
