--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
 <body BGCOLOR="#000000" BODY BACKGROUND="bkgrade.jpg" TEXT="#ff4040  " LINK="#ff4049" VLINK="#ff4040" ALINK="#ff4040">
 <CENTER><h1>Carrick's page</h1>
 	<img src="BLOODLINE.gif">
-
+	
+<p>Hello, I am carrick, and welcome to my webpage here on the internet. 
+	I am 26 years old. I study with the confusers and hope to get a job working for ericsson. 
+	
+</p>
 
 <p> SITE STILL UNDER CONTSTUCTION  </p>
 <img src="construc.gif">
 	<P>
-     Send me Mail if you have any questions, suggestions, or to say hello.<BR> <BR>
-   <A HREF="mailto:Carrick<unknow5763@gmail.com>"></A>
+     .<BR> <BR>
+   <A HREF="mailto:Carrick<unknow5763@gmail.com>">Send me Mail if you have any questions, suggestions, or to say hello</A>
       <IMG SRC="mbox.gif" ALIGN="ABSMIDDLE" WIDTH=63 HEIGHT=48 BORDER=0 ALT="Mail">
     </P>
 <BR> 
@@ -69,6 +73,6 @@
 
 </CENTER>
 </footer>
-			 
+			 <p>ALL OWNED BY CARRICK COPYRIGHT 2023</p>
 </body>
 </html> 
