--- a/photos.html
+++ b/photos.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <html>
+<body BGCOLOR="#000000" BODY BACKGROUND="bkgrade.jpg" TEXT="#ff4040  " LINK="#ff4049" VLINK="#ff4040" ALINK="#ff4040">
 <style>
 div.gallery {
   margin: 5px;
@@ -25,7 +27,11 @@ div.desc {
 </style>
 </head>
 <body>
-
+<div>
+  <center>
+  <h1> Here are some pictures! </h1>
+</center>
+</div>
 <div class="gallery">
   <a target="_blank" href="Images/Gallery/catacombsStairCase.jpg">
     <img src="Images/Gallery/catacombsStairCase.jpg"  width="800" height="600"  alt="Forest">
