--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 </p>
 
 <p> SITE STILL UNDER CONTSTUCTION  </p>
-<a href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ"> <img alt = "construction" src="construc.gif" width = 156 height = 106>
-	</a>
+<img src="construc.gif">
 	<P>
-     <BR> <BR>
+     .<BR> <BR>
    <A HREF="mailto:Carrick<unknow5763@gmail.com>">Send me Mail if you have any questions, suggestions, or to say hello</A>
       <IMG SRC="mbox.gif" ALIGN="ABSMIDDLE" WIDTH=63 HEIGHT=48 BORDER=0 ALT="Mail">
     </P>
@@ -29,19 +28,19 @@
 
 <P> I take loads of pictures too, click the camera to follow me on instagram </P> 
 <A HREF="photos.html"> Or click this to see some photos on here </A>
-<center>
+
  <a href="https://www.instagram.com/_carrick_pre/">
          <img alt="instagram" src="Camera_1.gif"
          width=100" height="70">
- </center>
 <p>
 	<A HREF="pages.html">some expierments with processing</A>
 <!--<A HREF="pagess.html"> some of my favourite photos I have taken</A> -->
 
+
 </CENTER>
 
 <center>
-
+				
 <footer>
 			 <h1> here is a lot of buttons i like </h1>
 <img src= " Images/4noone.gif ">
