--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	</head>
 <body>
-
-<html>
 <body BGCOLOR="#000000" BODY BACKGROUND="bkgrade.jpg" TEXT="#ff4040  " LINK="#ff4049" VLINK="#ff4040" ALINK="#ff4040">
 	
 <marquee scrollamount="20" marquee direction=left><h1>Welome to Carrick's page on the internet ! </h1></marquee>
@@ -79,7 +82,7 @@
 
 									 
 									 
-
+  <script src="./oneko.js"></script>
 
 </CENTER>
 </footer>
