--- a/index.html
+++ b/index.html
@@ -6,16 +6,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 <body>
-<body BGCOLOR="#000000" BODY BACKGROUND="bkgrade.jpg" TEXT="#ff4040  " LINK="#ff4049" VLINK="#ff4040" ALINK="#ff4040">
+<body BGCOLOR="#000000" BODY BACKGROUND="bkgrade.jpg" TEXT="#ffe6e6  " LINK="#ff6666" VLINK="#ff6666" ALINK="#ff6666">
 	
 <marquee scrollamount="20" marquee direction=left><h1>Welome to Carrick's page on the internet ! </h1></marquee>
+
+
 <CENTER><h1>Carrick's page</h1>
 	<img src="BLOODLINE.gif">
-	
+
+
 <p>Hello, I am carrick, and welcome to my webpage here on the internet. 
-	I am 26 years old. I study with the confusers and hope to get a job working for ericsson. 
+	I am 26 years old. I study with the confusers and hope to get a job working for ericsson. I like linux, wood working and big into music. I drive an old car and have a big subwoofer in it. I am fond of cats. 
+<br>
+<br>
 	
+	
+	<H2> Confuzer Languages i know of..</h2>
+	<ul> 
+	<li> java proably the strongest with java at the moment. As well as some of the fluff that comes with it, junit 5, maven ect <br> <img src = "java.gif"> <img src ="java1.gif">
+	<li> html js css I hate all of these but i dont hate js the most. 
+	<li>  C sound <a href = "https://csound.com/" > pretty nice little thingy for making the sound with a confuzer </a>
+	<li> Processing. have some stuff later on in the page about that but i do like processing quite a bit. its based off js but has loads of nice libaries that make it feel more cohesive than js. nice ide as well as loads of nice tutorials. and the <a href = "https://natureofcode.com/"> lovely The Nature of Code book </a>
+	<li> python, not a fan at all of pyhton but I appreciate how nicely it allows some tasks to be done. for example the buttons at the end of this page the html was creted by a pythong script. 
+	<li> C, I am starting to learn c as I do want to be able to use lower level programming languages. I kinda love the idea of using a lang so old and so understood and simple in its form. like 32 keywords is kinda ridc. 
+	<li> mysql and other stuff like that. I am not the best though. 
+	<li> other silly stuff like i used to use gamemaker for years and proably understand those scripts a little..
 </p>
+
+<center>
+<IMG SRC="golf.jpg" width="300"> 
+<p>I drive a 2003 golf mk4</p>
+<p>Its pretty bad the moment. leaking oil with a cracked windscreen...</p> 
+<p> I never thought I would drive a golf but I am found of the older cars.</p>
+<br>
+</center>
+
 
 <p> SITE STILL UNDER CONTSTUCTION  </p>
 <img src="construc.gif">
@@ -25,14 +50,21 @@
       <IMG SRC="mbox.gif" ALIGN="ABSMIDDLE" WIDTH=63 HEIGHT=48 BORDER=0 ALT="Mail">
     </P>
 <BR> 
+
 <p> 
+	I have two degrees in music technology, and like playing guitar, synth and bass. I also like programming music using programmes such as c sound. 
+		<A HREF="https://soundcloud.com/carrick" > click this yoke to check out my musics. </p>
+<br>
+<img src = "musicline14.gif"> </img>
+<p> 
+	<div>
 	I am an avid player of chess as well, click these to add me if you play online chess. <BR> <BR>
 	<IMG SRC="chessyah.gif" ALIGN="ABSMIDDLE" WIDTH=160 HEIGHT=120 BORDER=0 > <BR>
 	<A HREF="https://lichess.org/@/ubiklikeschesse"> lichess </A> <BR>
 	<A HREF="https://www.chess.com/member/hgrunt"> Chess.com </A> <BR> <BR>
-
+	</div>
 <P> I take loads of pictures too, click the camera to follow me on instagram </P> 
-<A HREF="photos.html"> Or click this to see some photos on here </A>
+<A HREF="photos.html"> or click this to see some photos on here </A>
 
  <a href="https://www.instagram.com/_carrick_pre/">
          <img alt="instagram" src="Camera_1.gif"
@@ -45,12 +77,7 @@
 </CENTER>
 
 <center>
-						 <br>
-						 <br>
-						 <a href='https://webring.dinhe.net/prev/https://carrick-pre.github.io/'>Previous</a>
-									 <a href = "https://webring.dinhe.net"> look ma im on a web ring</a> 
-<a href='https://webring.dinhe.net/next/https://carrick-pre.github.io/'>Next</a>
-	<br>
+					
 				
 <footer>
 			 <h1> here is a lot of buttons i like </h1>
