--- a/index.html
+++ b/index.html
@@ -5,22 +5,38 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style> 
+
+div.smelly {
+  background: rgba(0, 0, 0, 0.5);
+	border-style: outset;
+	border-width: 10px;
+	width: 80%;
+  	margin: auto;
+
+	
+}
 	.theContainer img {
   max-width: 100%;
   max-height: 45px;
 }
+
+
+
+
 	</style> 
 	</head>
 <body>
+
+
 <body BGCOLOR="#000000" BODY BACKGROUND="bkgrade.jpg" TEXT="#ffe6e6  " LINK="#ff6666" VLINK="#ff6666" ALINK="#ff6666">
-	
+
 <marquee scrollamount="20" marquee direction=left><h1>Welome to Carrick's page on the internet ! </h1></marquee>
 
 
 <CENTER><h1>Carrick's page</h1>
 	<img src="BLOODLINE.gif">
 
-
+<div class= "smelly">
 <p>Hello, I am carrick, and welcome to my webpage here on the internet. 
 	I am 26 years old. I study with the confusers and hope to get a job working for ericsson. I like linux, wood working and big into music. I drive an old car and have a big subwoofer in it. I am fond of cats. she/her pronouns. 
 <br>
@@ -83,6 +99,7 @@
 	<A HREF="pages.html">some expierments with processing</A>
 <!--<A HREF="pagess.html"> some of my favourite photos I have taken</A> -->
 
+</div>
 
 </CENTER>
 
