--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ div.smelly {
   background: rgba(0, 0, 0, 0.5);
 	border-style: outset;
 	border-width: 10px;
+	background-image : url("stars.gif");
 	width: 80%;
   	margin: auto;
 
@@ -17,7 +18,7 @@ div.smelly {
 }
 	.theContainer img {
   max-width: 100%;
-  max-height: 45px;
+  max-height: 32px;
 }
 
 
