--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 	<style> 
 
 div.smelly {
-  background: rgba(0, 0, 0, 0.5);
+  	background: rgba(0, 0, 0, 0.3);
 	border-style: outset;
 	border-width: 10px;
 	background-image : url("stars.gif");
 	width: 80%;
   	margin: auto;
+    
 
 	
 }
@@ -50,7 +51,7 @@ div.smelly {
 	<ul> 
 	<li> java proably the strongest with java at the moment. As well as some of the fluff that comes with it, junit 5, maven ect <br> <img src = "java.gif"> <img src ="java1.gif">
 	<li> html js css I hate all of these but i dont hate js the most. 
-	<li>  C sound <a href = "https://csound.com/" > pretty nice little thingy for making the sound with a confuzer </a>
+	<li>  C sound <a href = "https://csound.com/" > pretty nice little thingy for making the sound with a confuzer </a> I have made a song with it,  <a href ="https://soundcloud.com/carrick/nearing-tenebrosity"> here </a>
 	<li> Processing. have some stuff later on in the page about that but i do like processing quite a bit. its based off js but has loads of nice libaries that make it feel more cohesive than js. nice ide as well as loads of nice tutorials. and the <a href = "https://natureofcode.com/"> lovely The Nature of Code book </a>
 	<li> python, not a fan at all of pyhton but I appreciate how nicely it allows some tasks to be done. for example the buttons at the end of this page the html was creted by a pythong script. 
 	<li> C, I am starting to learn c as I do want to be able to use lower level programming languages. I kinda love the idea of using a lang so old and so understood and simple in its form. like 32 keywords is kinda ridc. 
