--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@ div.smelly {
 
 </footer>
 			 <p>ALL OWNED BY CARRICK COPYRIGHT 2023</p>
+			<p> except for the cat following the pointer. <a href = "https://github.com/adryd325/oneko.js" > got that here </a></p>
 </CENTER>
 </body>
 </html> 
