--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@ div.smelly {
 	background-image : url("stars.gif");
 	width: 80%;
   	margin: auto;
-    
-
-	
+}
+div.Lang {
+  	background: rgba(0, 0, 0, 0.3);
+	border-style: outset;
+	border-width: 10px;
+	background-image : url("stars.gif");
+	width: 80%;
+  	margin: auto;
 }
 	.theContainer img {
   max-width: 100%;
@@ -92,6 +97,7 @@ div.smelly {
 	<A HREF="https://www.chess.com/member/hgrunt"> Chess.com </A> <BR> <BR>
 	</div>
 <P> I take loads of pictures too, click the camera to follow me on instagram </P> 
+<p> I collect old lenses and I do film photography </p>
 <A HREF="photos.html"> or click this to see some photos on here </A>
 
  <a href="https://www.instagram.com/_carrick_pre/">
