--- a/photos.html
+++ b/photos.html
@@ -36,7 +36,7 @@ div.desc {
   <a target="_blank" href="Images/Gallery/catacombsStairCase.jpg">
     <img src="Images/Gallery/catacombsStairCase.jpg"  width="800" height="600"  alt="Forest">
   </a>
-  <div class="At the paris catacombs"></div>
+  <div class="desc" >At the paris catacombs</div>
 </div>
 
 <div class="gallery">
