--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style> 
 
 div.smelly {
@@ -14,44 +14,85 @@ div.smelly {
 	width: 80%;
   	margin: auto;
 }
-div.Lang {
+
+h11{
+color: #FFFFFF;
+      text-align: center;
+      text-shadow: 2px 2px #000000;
+
+}
+
+div.Lang{
   	background: rgba(0, 0, 0, 0.3);
 	border-style: outset;
-	border-width: 10px;
-	background-image : url("stars.gif");
-	width: 80%;
+	border-width: 5px;
+	background-image : url("bk1.jpg");
+	width: 60%;
   	margin: auto;
 }
 	.theContainer img {
   max-width: 100%;
   max-height: 32px;
+    }
+	
+	.marquee{
+	color: #FFFFFF;
+  display: inline-block;
+  background-image: -webkit-linear-gradient(left, violet, indigo, blue, green, yellow, orange, red);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+  animation: marquee 5s linear infinite;
 }
 
 
+   .marquee-img {
+    height: 96px;
+    width: 96px;
+     display: inline-block;
 
-
+  
+}
 	</style> 
 	</head>
-<body>
+
 
 
 <body BGCOLOR="#000000" BODY BACKGROUND="bkgrade.jpg" TEXT="#ffe6e6  " LINK="#ff6666" VLINK="#ff6666" ALINK="#ff6666">
 
-<marquee scrollamount="20" marquee direction=left><h1>Welome to Carrick's page on the internet ! </h1></marquee>
+<marquee behavior="scroll" direction="left" >
+<div class = marquee>
+<div style="display: flex; align-items: center;">
+  <img src="lain.gif" class="marquee-img">
+  <h1 style="margin: 0;">Hello welcome to my internet page, I hope you enjoy your stay<h1>
+  <img src="lain.gif" class="marquee-img">
+  </div>
+</div>
 
-
-<CENTER><h1>Carrick's page</h1>
-	<img src="BLOODLINE.gif">
+</marquee>
 
 <div class= "smelly">
+<CENTER>
+<br>
+<br>
+<br><br>
+<br>
+<br>
+
+<h1>Carrick's page</h1>
 <p>Hello, I am carrick, and welcome to my webpage here on the internet. 
 	I am 26 years old. I study with the confusers and hope to get a job working for ericsson. I like linux, wood working and big into music. I drive an old car and have a big subwoofer in it. I am fond of cats. she/her pronouns. 
+
+<br>
+<br>
+<br> 
 <br>
 <br>
 	<img src = "queer.gif">
 <br>
+<br> 
+<br>
 	
-	
+	<div class = "Lang">
 	<H2> Confuzer Languages i know of..</h2>
 	<ul> 
 	<li> java proably the strongest with java at the moment. As well as some of the fluff that comes with it, junit 5, maven ect <br> <img src = "java.gif"> <img src ="java1.gif">
@@ -62,19 +103,27 @@ div.Lang {
 	<li> C, I am starting to learn c as I do want to be able to use lower level programming languages. I kinda love the idea of using a lang so old and so understood and simple in its form. like 32 keywords is kinda ridc. 
 	<li> mysql and other stuff like that. I am not the best though. 
 	<li> other silly stuff like i used to use gamemaker for years and proably understand those scripts a little..
+	
+	</div>
 </p>
 
 <center>
-<IMG SRC="golf.jpg" width="300"> 
+<br>
+<IMG SRC="golf.jpg" width="200"> 
 <p>I drive a 2003 golf mk4</p>
 <p>Its pretty bad the moment. leaking oil with a cracked windscreen...</p> 
 <p> I never thought I would drive a golf but I am found of the older cars.</p>
+<p> I am not a Vee Dubber stan but I do recommend a mk4 golf if you need a car</p>
+<img SRC="vw_spin.gif" >
 <br>
 </center>
 
 
 <p> SITE STILL UNDER CONTSTUCTION  </p>
 <img src="construc.gif">
+<P> it has been two years and it is still a work in progress</p>
+
+
 	<P>
      .<BR> <BR>
    <A HREF="mailto:Carrick<unknow5763@gmail.com>">Send me Mail if you have any questions, suggestions, or to say hello</A>
