--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ div.Lang{
 	 <p> I think computers are one of the best things and by far the worst things to happen to us as human fleshy bags but sure look its chill as well. 
 	 </p>
 	 <br>
-	 <img src = "images/toilettech.jpg"
+	 <img src = "images/toilettech.jpg" width="80%">
 	 <br>
 	 <br>
 	 <p> this is a very informative picture</p>
