--- a/index.html
+++ b/index.html
@@ -194,8 +194,10 @@ div.Lang{
 
 </CENTER>
 <br>
+<center>
 <iframe width="314" height="321" scrolling="no" src="https://gifypet.neocities.org/pet/pet.html?name=sean&dob=1679403659&gender=f&element=Water&pet=cat.gif&map=forest.jpg&
 background=1995.png&tablecolor=black&textcolor=white" frameborder="0"></iframe>
+</center>
 <br>
 <center>
 	
@@ -204,39 +206,39 @@ background=1995.png&tablecolor=black&textcolor=white" frameborder="0"></iframe>
 	<div class="theContainer"> 
 			 <h1> here is a lot of buttons i like </h1>
 			 <a target="_blank" href="https://momg.neocities.org/"><img alt="Visit the Gif Gallery!" src="https://momg.neocities.org/site-images/momg-badge.gif"></a>
-<img src= " Images/buttons/4noone.gif ">
-<img src= " Images/buttons/anybrowser3.png ">
-<img src= " Images/buttons/bestviewed.gif ">
-<img src= " Images/buttons/bestview.gif ">
-<img src= " Images/buttons/brain2.gif ">
-<img src= " Images/buttons/bsrkrigr.gif ">
-<img src= " Images/buttons/button_enhanced.gif ">
-<img src= " Images/buttons/bview_w.gif ">
-<img src= " Images/buttons/clean_glasses.gif ">
-<img src= " Images/buttons/css2.gif ">
-<img src= " Images/buttons/emacs.png ">
-<img src= " Images/buttons/everything.gif ">
-<img src= " Images/buttons/femboy.gif ">
-<img src= " Images/buttons/grizzly.gif ">
-<img src= " Images/buttons/gutenberg.gif ">
-<img src= " Images/buttons/InternetArchive.png ">
-<img src= " Images/buttons/javanow.gif ">
-<img src= " Images/buttons/msfree.png ">
-<img src= " Images/buttons/nftbutton.gif ">
-<img src= " Images/buttons/notepadpp2.gif ">
-<img src= " Images/buttons/remail.gif ">
-<img src= " Images/buttons/right2repair.gif ">
-<img src= " Images/buttons/roly-saynotoweb3.gif ">
-<img src= " Images/buttons/seedyourtorrents.gif ">
-<img src= " Images/buttons/valid-html50.png ">
-</div> 
-									 
-									 
-  <script src="./oneko.js"></script>
-
-
-</footer>
-			 <p>ALL OWNED BY CARRICK COPYRIGHT 2023</p>
-</CENTER>
+			 <img src= " images/buttons/4noone.gif ">
+			 <img src= " images/buttons/anybrowser3.png ">
+			 <img src= " images/buttons/bestviewed.gif ">
+			 <img src= " images/buttons/bestview.gif ">
+			 <img src= " images/buttons/brain2.gif ">
+			 <img src= " images/buttons/bsrkrigr.gif ">
+			 <img src= " images/buttons/button_enhanced.gif ">
+			 <img src= " images/buttons/bview_w.gif ">
+			 <img src= " images/buttons/clean_glasses.gif ">
+			 <img src= " images/buttons/css2.gif ">
+			 <img src= " images/buttons/emacs.png ">
+			 <img src= " images/buttons/everything.gif ">
+			 <img src= " images/buttons/femboy.gif ">
+			 <img src= " images/buttons/grizzly.gif ">
+			 <img src= " images/buttons/gutenberg.gif ">
+			 <img src= " images/buttons/InternetArchive.png ">
+			 <img src= " images/buttons/javanow.gif ">
+			 <img src= " images/buttons/msfree.png ">
+			 <img src= " images/buttons/nftbutton.gif ">
+			 <img src= " images/buttons/notepadpp2.gif ">
+			 <img src= " images/buttons/remail.gif ">
+			 <img src= " images/buttons/right2repair.gif ">
+			 <img src= " images/buttons/roly-saynotoweb3.gif ">
+			 <img src= " images/buttons/seedyourtorrents.gif ">
+			 <img src= " images/buttons/valid-html50.png ">
+			</div> 
+			
+			
+			<script src="./oneko.js"></script>
+			
+			
+		</footer>
+		<p>ALL OWNED BY CARRICK COPYRIGHT 2023</p>
+	</CENTER>
 </body>
 </html>
