--- a/index.html
+++ b/index.html
@@ -206,31 +206,31 @@ background=1995.png&tablecolor=black&textcolor=white" frameborder="0"></iframe>
 	<div class="theContainer"> 
 			 <h1> here is a lot of buttons i like </h1>
 			 <a target="_blank" href="https://momg.neocities.org/"><img alt="Visit the Gif Gallery!" src="https://momg.neocities.org/site-images/momg-badge.gif"></a>
-			 <img src= " images/buttons/4noone.gif ">
-			 <img src= " images/buttons/anybrowser3.png ">
-			 <img src= " images/buttons/bestviewed.gif ">
-			 <img src= " images/buttons/bestview.gif ">
-			 <img src= " images/buttons/brain2.gif ">
-			 <img src= " images/buttons/bsrkrigr.gif ">
-			 <img src= " images/buttons/button_enhanced.gif ">
-			 <img src= " images/buttons/bview_w.gif ">
-			 <img src= " images/buttons/clean_glasses.gif ">
-			 <img src= " images/buttons/css2.gif ">
-			 <img src= " images/buttons/emacs.png ">
-			 <img src= " images/buttons/everything.gif ">
-			 <img src= " images/buttons/femboy.gif ">
-			 <img src= " images/buttons/grizzly.gif ">
-			 <img src= " images/buttons/gutenberg.gif ">
-			 <img src= " images/buttons/InternetArchive.png ">
-			 <img src= " images/buttons/javanow.gif ">
-			 <img src= " images/buttons/msfree.png ">
-			 <img src= " images/buttons/nftbutton.gif ">
-			 <img src= " images/buttons/notepadpp2.gif ">
-			 <img src= " images/buttons/remail.gif ">
-			 <img src= " images/buttons/right2repair.gif ">
-			 <img src= " images/buttons/roly-saynotoweb3.gif ">
-			 <img src= " images/buttons/seedyourtorrents.gif ">
-			 <img src= " images/buttons/valid-html50.png ">
+			 <img src= " images/Buttons/4noone.gif ">
+			 <img src= " images/Buttons/anybrowser3.png ">
+			 <img src= " images/Buttons/bestviewed.gif ">
+			 <img src= " images/Buttons/bestview.gif ">
+			 <img src= " images/Buttons/brain2.gif ">
+			 <img src= " images/Buttons/bsrkrigr.gif ">
+			 <img src= " images/Buttons/button_enhanced.gif ">
+			 <img src= " images/Buttons/bview_w.gif ">
+			 <img src= " images/Buttons/clean_glasses.gif ">
+			 <img src= " images/Buttons/css2.gif ">
+			 <img src= " images/Buttons/emacs.png ">
+			 <img src= " images/Buttons/everything.gif ">
+			 <img src= " images/Buttons/femboy.gif ">
+			 <img src= " images/Buttons/grizzly.gif ">
+			 <img src= " images/Buttons/gutenberg.gif ">
+			 <img src= " images/Buttons/InternetArchive.png ">
+			 <img src= " images/Buttons/msfree.png ">
+			 <img src= " images/Buttons/javanow.gif ">
+			 <img src= " images/Buttons/nftbutton.gif ">
+			 <img src= " images/Buttons/notepadpp2.gif ">
+			 <img src= " images/Buttons/remail.gif ">
+			 <img src= " images/Buttons/right2repair.gif ">
+			 <img src= " images/Buttons/roly-saynotoweb3.gif ">
+			 <img src= " images/Buttons/seedyourtorrents.gif ">
+			 <img src= " images/Buttons/valid-html50.png ">
 			</div> 
 			
 			
