--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ div.smelly {
 	border-style: outset;
 	border-width: 10px;
 	background-image : url("images/stars.gif");
-	width: 80%;
+	width: 90%;
   	margin: auto;
 }
 
@@ -26,14 +26,23 @@ div.computers{
 	border-style: outset;
 	border-width: 5px;
 	background-image : url("images/bk1.jpg");
-	width: 60%;
+	width: 70%;
+}
+.computers img:first-child {
+  float: left;
+  margin-right: 10px; /* optional */
+}
+
+.computers img.right-image {
+  float: right;
+  margin-left: 10px; /* optional */
 }
 
 div.Lang{
   	background: rgba(0, 0, 0, 0.3);
 	border-style: outset;
 	border-width: 5px;
-	background-image : url("images/bk1.jpg");
+	background-image : url("images/anistarz.gif");
 	width: 60%;
   	margin: auto;
 }
@@ -65,6 +74,9 @@ div.Lang{
 
 
 <body BGCOLOR="#000000" BODY BACKGROUND="images/bkgrade.jpg" TEXT="#ffe6e6  " LINK="#ff6666" VLINK="#ff6666" ALINK="#ff6666">
+
+
+	<center> <img src="images/greenguy.gif" </center>
 
 <marquee behavior="scroll" direction="left" >
 <div class = marquee>
@@ -103,7 +115,11 @@ div.Lang{
 
 <div class = "computers">
 	<br>
-	<center>
+
+		<img src="images/computer.gif" alt="">
+		<h1> CONFUZERS </h1>
+		<img src="images/computer__meltingA.gif" class="right-image"> 
+		<center>
 	 <p1> Ive been messing around with computers since the age of 12 or so. I build somemyself and my favourite laptops are thinkpads</p1>
 	 <p> I think computers are one of the best things and by far the worst things to happen to us as human fleshy bags but sure look its chill as well. 
 	 </p>
@@ -113,6 +129,8 @@ div.Lang{
 	 <br>
 	 <p> this is a very informative picture</p>
 	 <br>
+	 <p> by the way I do use linux ! </p>
+	 <img src = "images/tux_computer_dig_md_clr.gif">	
 	<br>
 	</center>
 
