--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		</div>
 			<p>Hello, I am carrick, and welcome to my webpage here on the internet.
 				I am 26 years old. I study with the confusers. I like linux, wood working and big into music. I
-				drive an old car and have a big subwoofer in it. I am fond of cats.
+				drive an old car and have a big subwoofer in it. I am fond of cats. this website breaks as soon as you load it on a mobile. you have been warned. 
 				
 			</p>
 	
@@ -176,7 +176,7 @@
 			<H2> Confuzer Languages i know of..</h2>
 			<ul>
 				<li> java proably the strongest with java at the moment. As well as some of the fluff that comes
-					with it, junit 5, maven ect <br> <img src="images/java.gif"> <img src="images/java1.gif">
+					with it, junit 5, maven ect. Java duke is an icon <br> <center> <img src="images/java.gif"> <img src="images/java1.gif"></center>
 				<li> html js css I hate all of these but i dont hate js the most.
 				<li> C sound <a href="https://csound.com/"> pretty nice little thingy for making the sound with
 						a confuzer </a> I have made a song with it, <a
@@ -190,13 +190,15 @@
 					script.
 				<li> C, I am starting to learn c as I do want to be able to use lower level programming
 					languages. I kinda love the idea of using a lang so old and so understood and simple in its
-					form. like 32 keywords is kinda ridc.
+					form. like 32 keywords is kinda ridc. 
 				<li> mysql and other stuff like that. I am not the best though.
 				<li> other silly stuff like i used to use gamemaker for years and proably understand those
 					scripts a little..
 				<li> I do not know c++ but want this rat on my page. </li> 
-				<Center><img src="images/Cpp_rat_mascot_2.png" width ="200" alt="">
-				<p> his name is keith and he is missing his back leg as he cannot handle oop, this image was drawn by Richard Stallman</p></Center>
+				<Center><img src="images/Cpp_rat_mascot_2.png" width ="200" alt="KEITHHHH">
+				<p> his name is keith and he is missing his back leg as he cannot handle pointers, this image was drawn by Richard Stallman</p></Center>
+
+				<p> Here is a link to my <a href ="https://github.com/Carrick-pre" > Github...</a></p>
 				
 
 		</div>
