--- a/Ai.html
+++ b/Ai.html
@@ -26,7 +26,7 @@
             </div>
             <div class="window-body">
                 <p> Seeing all the craze about AI programming, I have decided to build my own. However I do not like
-                    python So I decieded to write the worlds first Java based AI models</p>
+                    python So I decieded to write the worlds first Java based AI model</p>
                 <div class="field-row-stacked" style="width: 200px">
 
                     <textarea id="text20" rows="8"
