--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
 		
 		}
 
+		div.car{
+			border-style: outset;
+			border-width: 10px;
+			height: min-content ;
+			width: fit-content;
+			margin:auto;
+			background-image: url("images/PATT035.JPG");
+			
+			
+		
+		}
+
 		
 		h1 {
 			color: #7c3891;
@@ -251,23 +263,27 @@
 		<div class="car">
 		<center>
 			<br>
-			<IMG SRC="images/golf.jpg" width="200">
+			<IMG SRC="images/golf.png" width="350">
 			<p>I drive a 2003 golf mk4</p>
-			<p>Its pretty bad the moment. leaking oil with a cracked windscreen...</p>
+			<p>It's going mighty at the moment. with a cracked windscreen...</p>
 			<p> I never thought I would drive a golf but I am found of the older cars.</p>
 			<p> I am not a Vee Dubber stan but I do recommend a mk4 golf if you need a car</p>
 			<img SRC="images/vw_spin.gif">
 			<br>
 		</center>
-		</di>
+		</div>
 		
 
 		<div class="construction">
 			<center>
 		<p> SITE STILL UNDER CONTSTUCTION </p>
-		<img src="images/construc.gif">
-		<P> it has been two years and it is still a work in progress</p>
-			</center>
+		<img src="images/construction/construc.gif">
+	
+		
+			<img src="images/construction/ATWORK01.GIF">
+			<P> it has been two years and it is still a work in progress</p>
+			<img src="images/construction/CONSTRCT.GIF">
+		</center>
 		
 		</div>
 
@@ -298,9 +314,9 @@
 			style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: 
 		ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
 			<a href="https://soundcloud.com/carrick" title="Carrick" target="_blank"
-				style="color: #cccccc; text-decoration: none;">Carrick</a> · <a
+				style="color: #cccccc; text-decoration: none;"></a> · <a
 				href="https://soundcloud.com/carrick/night-sky" title="Night Sky" target="_blank"
-				style="color: #cccccc; text-decoration: none;">Night Sky</a>
+				style="color: #cccccc; text-decoration: none;"></a>
 		</div>
 	</p>	
 	<center>
